merge gitignore